# wind-fault-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENHANCEMENTS.md  EXECUTIVE_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  TURBINE_STATES.md  demo.py  docker-compose.yml  pyproject.toml  requests.http  requirements.txt  run.sh
app/: __init__.py  background_worker.py  config.py  db.py  main.py  models.py  rules_engine.py  schemas.py
app/routers/: alarms.py  analytics.py  recommendations.py  turbines.py
